--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@
 .image{
   width: 200px;
   height: 200px;
-  background:url("images/PicsArt_06-21-01.09.24.png");
+  background:url("PicsArt_06-21-01.09.24.png");
   background-size: cover;
   background-position: 0 0;
   border-radius: 50%;
