--- a/style.css
+++ b/style.css
@@ -119,8 +119,9 @@ background: #000;
   transform: translatey(-5px);
 }
 
-
-
+.btn a{
+text-decoration:none;
+  color:#fff;}
 @media only screen and (max-width: 720px) {
 
 
