--- a/style.css
+++ b/style.css
@@ -120,8 +120,12 @@ background: #000;
 }
 
 .btn a{
-text-decoration:none;
-  color:#fff;}
+  text-decoration: none;
+  color: #fff !important;
+}
+
+
+
 @media only screen and (max-width: 720px) {
 
 
